Archive2/f8/e502ea906b5464/output
main.cpp:3:19: error: 'const' qualifiers cannot be applied to 'const int&'
 int const & const r = i;
                   ^
